--- a/src/m1-ui/app/App.module.css
+++ b/src/m1-ui/app/App.module.css
@@ -22,18 +22,27 @@ h1 {
     color: white;
 
 }
+.searchResult{
 
+    align-items: center;
+}
 .searchingBlock {
     /*border: solid 1px white;*/
     padding-top: 50px;
     flex-direction: row;
     text-decoration: none;
+    justify-content: flex-end;
+    width: 100%;
 }
 
+.inputZone{
+    display: flex;
+    justify-content: center;
+}
 
 .searchingBlock input {
     margin-right: 10px;
-    font-size: 25px;
+    font-size: 35px;
 
 }
 
@@ -59,8 +68,8 @@ h1 {
 
 
 
-.filmPreview a:hover {
-    color: red;
+.filmPreview:hover {
+    background-color: #333333;
 
 }
 .filmPreview a:active {
@@ -68,14 +77,15 @@ h1 {
 }
 .filmPreview a {
     text-decoration: none;
-    color: white
+    color: #d25555;
 }
 
 
 .searchResult .filmPreview {
     padding-bottom: 25px;
-    border-bottom: solid 5px #7780a0;
-    max-width: 400px;
+    border-top: solid 5px #7780a0;
+    width: 350px;
+
 }
 
 
@@ -86,6 +96,7 @@ h1 {
 }
 
 .Title {
+
     font-size:35px;
     padding: 15px 15px;
     font-weight: bold;
@@ -108,7 +119,7 @@ h1 {
 
 .movieContainer img {
     width: 100%;
-    padding-left: 35px;
+
     min-width: 400px;
     max-width: 500px;
 
@@ -122,4 +133,100 @@ h1 {
     flex-direction: column;
     align-items: normal;
 
+}
+
+.moviePage{
+    display: flex;
+    flex-direction: column;
+    /*align-items: center;*/
+    padding-left: 35px;
+}
+
+
+.moviePage a {
+    text-decoration: none;
+    color: #d25555;
+    font-size: 35px;
+    width: 270px;
+}
+
+.moviePage a:hover{
+    color: white;
+}
+.moviePage a:active {
+    color: black;
+}
+
+/*--------------------------------------------------------------------------------------*/
+
+.pagesBlock{
+    display: flex;
+    flex-direction: row;
+    font-size: 30px;
+    font-weight: bold;
+    justify-content: flex-start;
+
+}
+.pagesBlock span:hover{
+    color: #d25555;
+    font-weight: bold;
+}
+.pagesBlock span{
+    cursor: pointer;
+    padding-right: 15px;
+}
+
+.pagesBlock .checked{
+    color: #d25555;
+    font-weight: bold;
+    font-size: 31px;
+}
+.pageSwitch{
+    display: flex;
+    flex-direction: row;
+}
+
+.toggleBlock{
+    padding: 50px 25px;
+    width: 100%;
+    height: 35px;
+    display: flex;
+    flex-direction: row;
+    font-size: 30px;
+    font-weight: bold;
+    justify-content: space-between;
+}
+
+
+
+.toggleBlock input{
+    width: 60px;
+}
+
+.pageToggle button{
+    height: 100%
+;
+}
+.pageToggle{
+    display: flex;
+    flex-direction: row;
+    padding-right: 80px;
+}
+
+.currentPage{
+    padding: 0 10px 0 10px;
+    font-size: 40px;
+    color: #d25555;
+}
+
+.totalPage{
+    padding-right: 25px;
+}
+
+.changePage div{
+ padding-right: 10px;
+}
+.changePage{
+    display: flex;
+padding-left: 25px;
 }
