--- a/src/m1-ui/app/App.module.css
+++ b/src/m1-ui/app/App.module.css
@@ -52,7 +52,7 @@ h1 {
 }
 
 .searchingBlock button {
-    font-size: 25px;
+    font-size: 35px;
 }
 
 .searchingBlock button:active {
@@ -204,8 +204,8 @@ h1 {
 }
 
 .pageToggle button{
-    height: 100%
-;
+    height: 100%;
+    font-size: 25px;
 }
 .pageToggle{
     display: flex;
@@ -227,6 +227,10 @@ h1 {
  padding-right: 10px;
 }
 .changePage{
+
     display: flex;
 padding-left: 25px;
+}
+.changePage button{
+    font-size: 25px;
 }
