--- a/src/m1-ui/u3-css/c4-Movie.module.css
+++ b/src/m1-ui/u3-css/c4-Movie.module.css
@@ -58,7 +58,7 @@
         display: flex;
         flex-direction: column;
         align-items: normal;
-
+        font-size: 20px;
     }
 
     .moviePage {
@@ -103,6 +103,7 @@
         display: flex;
         flex-direction: column;
         align-items: normal;
+        font-size: 20px;
 
     }
 
