--- a/src/m1-ui/u3-css/c4-Movie.module.css
+++ b/src/m1-ui/u3-css/c4-Movie.module.css
@@ -35,6 +35,7 @@
     }
 
     .Title {
+
         font-size: 50px;
         text-align: center;
     }
@@ -50,21 +51,25 @@
 @media screen and (max-width: 700px) {
 
     .movieContainer img {
+
         width: 100%;
+        padding-bottom: 15px;
+
     }
 
     .movieInfo {
         width: 100%;
         display: flex;
         flex-direction: column;
-        align-items: normal;
         font-size: 20px;
+
     }
 
     .moviePage {
         display: flex;
         flex-direction: column;
         width: 100%;
+
     }
 
     .movieContainer {
@@ -72,13 +77,16 @@
         padding-top: 40px;
         display: flex;
         flex-direction: column;
+        align-items: center;
 
 
         font-size: 30px;
     }
 
     .Title {
-        font-size: 35px;
+        font-weight: bold;
+        padding-top: 15px;
+        font-size: 30px;
         text-align: center;
     }
 
@@ -110,7 +118,6 @@
     .moviePage {
         display: flex;
         flex-direction: column;
-        /*align-items: center;*/
         width: 100%;
     }
 
@@ -125,6 +132,7 @@
     }
 
     .Title {
+        padding-top: 15px;
         font-size: 35px;
         text-align: center;
     }
